# sitara-apps

./: .gitignore  .gitmodules  Makefile  README  Rules.make
apps/benchmark_demo/: Makefile
apps/common/ipc_rpmsg/: Makefile
apps/common/ipc_rpmsg_lib/: Makefile
apps/servo_drive_demo/: Makefile
apps/servo_drive_demo/position_speed_loop/: README
benchmark_demo/: Makefile
benchmark_demo/common/include/: benchmark_stat.h
benchmark_demo/webserver_app/app/: index.html  main.js
benchmark_demo/webserver_app/linux_app/: rpmsg_json.c  rpmsg_json.service
benchmark_demo/webserver_app/webserver/: benchmark_server.service
common/libs/: Makefile
examples/ccs/: .gitignore
examples/ccs/baremetal_gpio_interrupt_am64x_m4f/: .cproject  .project  linker_m4f.lds  main.c
examples/ccs/baremetal_gpio_interrupt_am64x_r5f/: .gitignore  .project  main.c
examples/ccs/baremetal_template_app_am64x_a53/: .cproject  .project  linker_a53.lds  main.c
examples/r5f_hello_world/: Makefile
examples/timesync/: Makefile
makerules/: benchmark_demo.mak  common_libs.mak  ipc_rpmsg_lib.mak  r5f_hello_world.mak  servo_drive_demo.mak  timesync_example.mak
servo_drive_demo/: Makefile
servo_drive_demo/opc_ua_app/: CMakeLists.txt
servo_drive_demo/opc_ua_app/src/: main.c
uname_demo/app/: index.html  main.js  oob_data.json  project.json
uname_demo/webserver/: npm-shrinkwrap.json  package.json  uname_server.conf  uname_server.js
uname_demo/webserver_app/: uname_server.js
webserver-oob/webserver_app/: package.json  webserver-oob.conf  webserver-oob.service  webserver.js
(+486 files in other folders)
